--- a/Mek/Mek.vcxproj
+++ b/Mek/Mek.vcxproj
@@ -19,6 +19,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Program.cpp" />
     <ClCompile Include="Shader.cpp" />
+    <ClCompile Include="TextRendering.cpp" />
     <ClCompile Include="Texture.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -31,6 +32,7 @@
     <ClInclude Include="LightComponent.h" />
     <ClInclude Include="Program.h" />
     <ClInclude Include="Shader.h" />
+    <ClInclude Include="TextRendering.h" />
     <ClInclude Include="Texture.h" />
   </ItemGroup>
   <ItemGroup>
