--- a/Mek/Mek.vcxproj
+++ b/Mek/Mek.vcxproj
@@ -20,6 +20,7 @@
     <ClCompile Include="Program.cpp" />
     <ClCompile Include="Shader.cpp" />
     <ClCompile Include="TextRendering.cpp" />
+    <ClCompile Include="TextRenderingShader.cpp" />
     <ClCompile Include="Texture.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -33,6 +34,7 @@
     <ClInclude Include="Program.h" />
     <ClInclude Include="Shader.h" />
     <ClInclude Include="TextRendering.h" />
+    <ClInclude Include="TextRenderShader.h" />
     <ClInclude Include="Texture.h" />
   </ItemGroup>
   <ItemGroup>
