[ADD] A broken form of Collision, still needs work

--- a/Mek/Mek.vcxproj
+++ b/Mek/Mek.vcxproj
@@ -13,9 +13,10 @@
   <ItemGroup>
     <ClCompile Include="Bitmap.cpp" />
     <ClCompile Include="Camera.cpp" />
+    <ClCompile Include="ComponentCollision.cpp" />
     <ClCompile Include="ComponentGraphics.cpp" />
     <ClCompile Include="GameObject.cpp" />
-    <ClCompile Include="Input.cpp" />
+    <ClCompile Include="ComponentInput.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Program.cpp" />
     <ClCompile Include="Shader.cpp" />
@@ -25,9 +26,10 @@
     <ClInclude Include="Bitmap.h" />
     <ClInclude Include="Camera.h" />
     <ClInclude Include="Component.h" />
+    <ClInclude Include="ComponentCollision.h" />
     <ClInclude Include="ComponentGraphics.h" />
     <ClInclude Include="GameObject.h" />
-    <ClInclude Include="Input.h" />
+    <ClInclude Include="ComponentInput.h" />
     <ClInclude Include="LightComponent.h" />
     <ClInclude Include="Program.h" />
     <ClInclude Include="Shader.h" />
