[WRK] Skybox and Terrain

--- a/Mek/Mek.vcxproj
+++ b/Mek/Mek.vcxproj
@@ -17,6 +17,7 @@
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="ComponentCollision.cpp" />
     <ClCompile Include="ComponentGraphics.cpp" />
+    <ClCompile Include="Framebuffer.cpp" />
     <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="ComponentInput.cpp" />
     <ClCompile Include="Interpolation.cpp" />
@@ -40,6 +41,7 @@
     <ClInclude Include="ComponentCollision.h" />
     <ClInclude Include="ComponentGraphics.h" />
     <ClInclude Include="ComponentPhysics.h" />
+    <ClInclude Include="Framebuffer.h" />
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="ComponentInput.h" />
     <ClInclude Include="ComponentLight.h" />
