wandering via random pathfinding. A small bug when switching from path to path. Will look at it when it's not 5 am.

--- a/Mek/Mek.vcxproj.filters
+++ b/Mek/Mek.vcxproj.filters
@@ -13,6 +13,9 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="Inline Files">
+      <UniqueIdentifier>{4ace166a-08bb-45fd-85ab-8ef045814f1c}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Program.cpp">
@@ -152,6 +155,12 @@
     <ClInclude Include="Framebuffer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="AIBehaviour.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="NavMesh.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Text Include="fragment-shader.frag">
@@ -197,6 +206,12 @@
     </None>
     <None Include="skybox.frag">
       <Filter>Resource Files</Filter>
+    </None>
+    <None Include="AIBehaviour.inl">
+      <Filter>Inline Files</Filter>
+    </None>
+    <None Include="NavMesh.inl">
+      <Filter>Inline Files</Filter>
     </None>
   </ItemGroup>
 </Project>
