--- a/Mek/Mek.vcxproj
+++ b/Mek/Mek.vcxproj
@@ -35,6 +35,7 @@
   <ItemGroup>
     <ClInclude Include="2dOverlay.h" />
     <ClInclude Include="2dOverlayAnim.h" />
+    <ClInclude Include="AIBehaviour.h" />
     <ClInclude Include="Bitmap.h" />
     <ClInclude Include="Camera.h" />
     <ClInclude Include="Component.h" />
@@ -48,6 +49,7 @@
     <ClInclude Include="ComponentForce.h" />
     <ClInclude Include="Input.h" />
     <ClInclude Include="LightComponent.h" />
+    <ClInclude Include="NavMesh.h" />
     <ClInclude Include="Program.h" />
     <ClInclude Include="Projectile.h" />
     <ClInclude Include="RayVsTriangle.h" />
@@ -64,8 +66,10 @@
     <Text Include="vertex-shader.vert" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="AIBehaviour.inl" />
     <None Include="hud.frag" />
     <None Include="hud.vert" />
+    <None Include="NavMesh.inl" />
     <None Include="skinning.frag" />
     <None Include="skinning.vert" />
     <None Include="skinningA.frag" />
@@ -118,6 +122,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
+      <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;_MBCS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
@@ -136,6 +141,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
+      <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;_MBCS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
