--- a/Mek/Mek.vcxproj
+++ b/Mek/Mek.vcxproj
@@ -22,6 +22,7 @@
     <ClCompile Include="ComponentInput.cpp" />
     <ClCompile Include="Interpolation.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Model.cpp" />
     <ClCompile Include="Program.cpp" />
     <ClCompile Include="Projectile.cpp" />
     <ClCompile Include="RayVsTriangle.cpp" />
@@ -49,6 +50,7 @@
     <ClInclude Include="ComponentForce.h" />
     <ClInclude Include="Input.h" />
     <ClInclude Include="LightComponent.h" />
+    <ClInclude Include="Model.h" />
     <ClInclude Include="Program.h" />
     <ClInclude Include="Projectile.h" />
     <ClInclude Include="RayVsTriangle.h" />
