Finished FBO's, downsized Terrain to improve load times, now 256x256, fixed issues that arose because of the downsize.

--- a/Mek/Mek.vcxproj
+++ b/Mek/Mek.vcxproj
@@ -74,6 +74,8 @@
     <None Include="hud.frag" />
     <None Include="hud.vert" />
     <None Include="NavMesh.inl" />
+    <None Include="pass.frag" />
+    <None Include="pass.vert" />
     <None Include="skinning.frag" />
     <None Include="skinning.vert" />
     <None Include="skinningA.frag" />
