--- a/Mek/Mek.vcxproj.filters
+++ b/Mek/Mek.vcxproj.filters
@@ -225,5 +225,11 @@
     <None Include="NavMesh.inl">
       <Filter>Inline Files</Filter>
     </None>
+    <None Include="pass.frag">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="pass.vert">
+      <Filter>Resource Files</Filter>
+    </None>
   </ItemGroup>
 </Project>
