--- a/Mek/Mek.vcxproj
+++ b/Mek/Mek.vcxproj
@@ -17,7 +17,6 @@
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="ComponentCollision.cpp" />
     <ClCompile Include="ComponentGraphics.cpp" />
-    <ClCompile Include="FMODmanager.cpp" />
     <ClCompile Include="Framebuffer.cpp" />
     <ClCompile Include="FramebufferEffects.cpp" />
     <ClCompile Include="GameObject.cpp" />
@@ -30,6 +29,7 @@
     <ClCompile Include="Render.cpp" />
     <ClCompile Include="Shader.cpp" />
     <ClCompile Include="Skybox.cpp" />
+    <ClCompile Include="SoundManager.cpp" />
     <ClCompile Include="Target.cpp" />
     <ClCompile Include="Terrain.cpp" />
     <ClCompile Include="TextRendering.cpp" />
@@ -45,7 +45,6 @@
     <ClInclude Include="ComponentCollision.h" />
     <ClInclude Include="ComponentGraphics.h" />
     <ClInclude Include="ComponentPhysics.h" />
-    <ClInclude Include="FMODmanager.h" />
     <ClInclude Include="Framebuffer.h" />
     <ClInclude Include="FramebufferEffects.h" />
     <ClInclude Include="GameObject.h" />
@@ -62,6 +61,7 @@
     <ClInclude Include="Shader.h" />
     <ClInclude Include="Interpolation.h" />
     <ClInclude Include="Skybox.h" />
+    <ClInclude Include="SoundManager.h" />
     <ClInclude Include="Target.h" />
     <ClInclude Include="Terrain.h" />
     <ClInclude Include="TextRendering.h" />
