--- a/Mek/Mek.vcxproj
+++ b/Mek/Mek.vcxproj
@@ -16,13 +16,13 @@
     <ClCompile Include="Bitmap.cpp" />
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="ComponentCollision.cpp" />
-    <ClCompile Include="ComponentGraphics.cpp" />
     <ClCompile Include="Framebuffer.cpp" />
     <ClCompile Include="FramebufferEffects.cpp" />
     <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="ComponentInput.cpp" />
     <ClCompile Include="Interpolation.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Model.cpp" />
     <ClCompile Include="Program.cpp" />
     <ClCompile Include="Projectile.cpp" />
     <ClCompile Include="RayVsTriangle.cpp" />
@@ -43,7 +43,6 @@
     <ClInclude Include="Camera.h" />
     <ClInclude Include="Component.h" />
     <ClInclude Include="ComponentCollision.h" />
-    <ClInclude Include="ComponentGraphics.h" />
     <ClInclude Include="ComponentPhysics.h" />
     <ClInclude Include="Framebuffer.h" />
     <ClInclude Include="FramebufferEffects.h" />
@@ -53,6 +52,7 @@
     <ClInclude Include="ComponentForce.h" />
     <ClInclude Include="Input.h" />
     <ClInclude Include="LightComponent.h" />
+    <ClInclude Include="Model.h" />
     <ClInclude Include="NavMesh.h" />
     <ClInclude Include="Program.h" />
     <ClInclude Include="Projectile.h" />
@@ -82,6 +82,8 @@
     <None Include="NavMesh.inl" />
     <None Include="pass.frag" />
     <None Include="pass.vert" />
+    <None Include="shadow.frag" />
+    <None Include="shadow.vert" />
     <None Include="skinning.frag" />
     <None Include="skinning.vert" />
     <None Include="skinningA.frag" />
