Another update to Godrays. Making an appropriate texture for the obscurity map.

--- a/Mek/Mek.vcxproj
+++ b/Mek/Mek.vcxproj
@@ -90,6 +90,7 @@
     <None Include="skinningA.vert" />
     <None Include="skybox.frag" />
     <None Include="skybox.vert" />
+    <None Include="skybox2.frag" />
     <None Include="terrain.frag" />
     <None Include="terrain.vert" />
     <None Include="text.frag" />
