Working on shadowmapping issue with sampling the shadowmap

--- a/Mek/Mek.vcxproj
+++ b/Mek/Mek.vcxproj
@@ -84,6 +84,8 @@
     <None Include="NavMesh.inl" />
     <None Include="pass.frag" />
     <None Include="pass.vert" />
+    <None Include="shadow.frag" />
+    <None Include="shadow.vert" />
     <None Include="skinning.frag" />
     <None Include="skinning.vert" />
     <None Include="skinningA.frag" />
