--- a/Mek/Mek.vcxproj.filters
+++ b/Mek/Mek.vcxproj.filters
@@ -197,6 +197,9 @@
     <ClInclude Include="SoundManager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ShieldVariables.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Text Include="fragment-shader.frag">
