--- a/Mek/Mek.vcxproj
+++ b/Mek/Mek.vcxproj
@@ -68,6 +68,7 @@
     <ClInclude Include="Projectile.h" />
     <ClInclude Include="RayVsTriangle.h" />
     <ClInclude Include="Render.h" />
+    <ClInclude Include="ReverbNode.h" />
     <ClInclude Include="Shader.h" />
     <ClInclude Include="Interpolation.h" />
     <ClInclude Include="ShieldVariables.h" />
